--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,25 +1,38 @@
-﻿<Window x:Class="ProizvodkaWPF.MainWindow"
+﻿
+    <Window x:Class="ProizvodkaWPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProizvodkaWPF"
+        xmlns:controls="clr-namespace:ProizvodkaWPF"
+        xmlns:System="clr-namespace:System;assembly=mscorlib"
+        
+        
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Window.Resources>
+        <System:Double x:Key="fontSize">14</System:Double>
         <!--A Style that affects all TextBlocks-->
         <Style TargetType="TextBox">
             <Setter Property="HorizontalAlignment" Value="Stretch" />
             <Setter Property="VerticalContentAlignment" Value="Center" />
             <Setter Property="FontFamily" Value="Times New Roman"/>
-            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="FontSize" Value="{StaticResource fontSize}"/>
         </Style>
 
         <Style TargetType="Label">
             <Setter Property="HorizontalAlignment" Value="Stretch" />
             <Setter Property="VerticalContentAlignment" Value="Center" />
             <Setter Property="FontFamily" Value="Times New Roman"/>
-            <Setter Property="FontSize" Value="10"/>
+            <Setter Property="FontSize" Value="{StaticResource fontSize}"/>
+        </Style>
+
+        <Style TargetType="TextBlock">
+            <Setter Property="HorizontalAlignment" Value="Stretch" />
+            
+            <Setter Property="FontFamily" Value="Times New Roman"/>
+            <Setter Property="FontSize" Value="{StaticResource fontSize}"/>
         </Style>
     </Window.Resources>
     <TabControl TabStripPlacement="Top" Margin="0, 0, 0, 10">
@@ -56,7 +69,16 @@
                 </Grid.ColumnDefinitions>
 
                 <Label Content="ФИО студента" Grid.Row="0" Grid.Column="0" />
-                <TextBox Text="" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" x:Name="FirstTabFirst"  />
+
+                <AdornerDecorator Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2">
+                    <TextBox x:Name="FirstTabFirst" >
+                        <controls:WatermarkService.Watermark>
+                            <TextBlock >ФИО студента в родительном падеже</TextBlock>
+                        </controls:WatermarkService.Watermark>
+                    </TextBox>
+                </AdornerDecorator>
+
+                <!--<TextBox Text="" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" x:Name="FirstTabFirst"  />-->
 
                 <Label Content="Направления подготовки" Grid.Row="1" Grid.Column="0" />
                 <TextBox Text="" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" x:Name="FirstTabSecond"  />
@@ -76,7 +98,7 @@
 
 
 
-
+              
 
 
 
